   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.
 * The %u sub now works for built-in commands, as well as $-commands.
   Useful for @hooks. [MG]
 * The use command now understands english matching. Suggested by
   Yuriko.
 * Rooms can now use @open/open(). [MG]

Functions:
  * lpids(), getpids(), and pidinfo() provide information about
    wait/semaphore process ids and processes. Suggested by
    Yuriko@M*U*S*H, code by Javelin.
  * lalign() works like align(), but takes a single arg with a list of
    columns, instead of one arg for each column. Suggested by Teal. [MG]

Fixes:
  * @pcreate without a password would crash the game. Fixed. [GM]
  * DARK-disconnected on channels was turned into DARK-connected, on
    disconnect. Reported by Paige@M*U*S*H, among others.
  * MOGRIFY`BLOCK wasn't being called, as help @channel6 said it was.
    Oops. [GM]
  * Some help fixes. [GM]
  * @clone could mess up the names of the original and the clone. 
    Reported by qa'toq. [SW]
  * Crash bugs in rand() and randword(). [SW]
  * Added --disable-zlib configure option to turn off using
    zlib to work directly with compressed databases. Passing this to
    configure makes the game act like pre p8 ones. [SW]
  * member() now ignores ANSI in matches. Reported by Minion. [MG]
  * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]
  * hidden() now works on descriptors as advertised. Reported by Teal. [MG]
  * @name could cause a crash. Fixed. Reported by Zedekiah@M*U*S*H [GM]
  * @nscemit/silent didn't work. Reported by Paige. [MG]
  * The chatdb failed to load when objects of the wrong type were listed
    as channel members. Reported by Teal. [MG]
  * flags() on an attribute used as the root of a tree would include the
    ` twice.

Version 1.8.3 patchlevel 9                      Feb 28, 2009

Fixes:
 * Starting up without an existing database was broken in p8.