@@ -3143,7 +3143,7 @@ announce_connect(dbref player, int isnew, int num)
   if (isnew) {
     /* A brand new player created. */
     snprintf(tbuf1, BUFFER_LEN, T("%s created."), Name(player));
-    flag_broadcast(0, "MONITOR", "%s %s", T("GAME:"), tbuf1);
+    flag_broadcast(0, "HEAR_CONNECT", "%s %s", T("GAME:"), tbuf1);
     if (Suspect(player))
       flag_broadcast("WIZARD", 0, T("GAME: Suspect %s created."), Name(player));
   }
@@ -3164,9 +3164,9 @@ announce_connect(dbref player, int isnew, int num)
     flag_broadcast("WIZARD", 0, T("GAME: Suspect %s"), tbuf1);
 
   if (Dark(player)) {
-    flag_broadcast("ROYALTY WIZARD", "MONITOR", "%s %s", T("GAME:"), tbuf1);
+    flag_broadcast("ROYALTY WIZARD", "HEAR_CONNECT", "%s %s", T("GAME:"), tbuf1);
   } else
-    flag_broadcast(0, "MONITOR", "%s %s", T("GAME:"), tbuf1);
+    flag_broadcast(0, "HEAR_CONNECT", "%s %s", T("GAME:"), tbuf1);
 
   if (ANNOUNCE_CONNECTS)
     chat_player_announce(player, message, num == 1);
@@ -3381,9 +3381,9 @@ announce_disconnect(DESC *saved)
   if (Suspect(player))
     flag_broadcast("WIZARD", 0, T("GAME: Suspect %s"), tbuf1);
   if (Dark(player)) {
-    flag_broadcast("ROYALTY WIZARD", "MONITOR", "%s %s", T("GAME:"), tbuf1);
+    flag_broadcast("ROYALTY WIZARD", "HEAR_CONNECT", "%s %s", T("GAME:"), tbuf1);
   } else
-    flag_broadcast(0, "MONITOR", "%s %s", T("GAME:"), tbuf1);
+    flag_broadcast(0, "HEAR_CONNECT", "%s %s", T("GAME:"), tbuf1);
 
   if (num < 2) {
     clear_flag_internal(player, "CONNECTED");
